# taifexd-date

./: $NOTEBOOK_FILE_PATH  README.md  code_quality_report.md  config.yaml  config.yaml.template  main.py  pyproject.toml  run_stable.ipynb
config/: schemas.json
data_pipeline_v15/: README.md  main.py  pyproject.toml  run_stable.ipynb  run_v15.ipynb  run_v16_stable.ipynb
data_pipeline_v15/config/: schemas.json
data_pipeline_v15/src/data_pipeline_v15/: database_loader.py  file_parser.py  manifest_manager.py  pipeline_orchestrator.py
data_pipeline_v15/src/data_pipeline_v15/core/: __init__.py  constants.py
data_pipeline_v15/src/data_pipeline_v15/utils/: logger.py  monitor.py
data_pipeline_v15/tests/: test_example.py
src/data_pipeline_v15/: data_transformer.py  data_validator.py  database_loader.py  file_parser.py  manifest_manager.py  pipeline_orchestrator.py
src/data_pipeline_v15/core/: constants.py
src/data_pipeline_v15/utils/: logger.py  monitor.py
tests/: conftest.py  test_data_transformer.py  test_data_validator.py  test_database_loader.py  test_file_parser.py  test_pipeline_integration.py  test_pipeline_orchestrator.py
tests/fixtures/csvs/: completely_unidentifiable.csv  empty_with_header.csv  encoding_error_latin1.csv  no_matching_schema_keywords.csv  normal_big5.csv  normal_utf8.csv  normal_utf8_copy.csv  normal_utf8_with_invalid_data.csv  weekly_report_mismatched_fields.csv
