[project]
name = "data-pipeline-v15"
version = "0.1.0"

description = "數據整合平台 v15 的核心處理引擎"
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "duckdb (>=1.3.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "data_pipeline_v15", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
